@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $bindir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.01';
+my $version = '1.02';
 ($libdir, $bindir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -257,9 +257,9 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 1413,
-		'Changes', 178,
+		'Changes', 339,
 		'MANIFEST', 86,
-		'Evol.pm', 17729,
+		'Evol.pm', 17806,
 		'bin/ps_evol', 3775,
 		'Clui', 31705,
 		'test.pl', 3750,
